<resources>
    <string name="abs__action_bar_home_description">Navigate home</string>
    <string name="abs__action_bar_up_description">Navigate up</string>
    <string name="abs__action_menu_overflow_description">More options</string>
    <string name="abs__action_mode_done">Done</string>
    <string name="abs__activity_chooser_view_see_all">See all...</string>
    <string name="abs__activity_chooser_view_dialog_title_default">Select activity</string>
    <string name="abs__share_action_provider_share_with">Share with...</string>
    <string name="abs__activitychooserview_choose_application">Choose an application</string>
    <string name="abs__shareactionprovider_share_with">Share with</string>
    <string name="abs__shareactionprovider_share_with_application">Share with %s</string>
    <string name="abs__searchview_description_search">Search</string>
    <string name="abs__searchview_description_query">Search query</string>
    <string name="abs__searchview_description_clear">Clear query</string>
    <string name="abs__searchview_description_submit">Submit query</string>
    <string name="abs__searchview_description_voice">Voice search</string>
    <string name="app_name">iDisplay</string>
    <string name="connection_screen_search_string">Searching… Make sure that iDisplay software is running on your desktop.</string>
    <string name="connection_screen_title">Connection</string>
    <string name="version_string">Version:</string>
    <string name="about_screen_title">About</string>
    <string name="server_not_found">"iDisplay desktop application cannot be found. Please check your network connection. If iDisplay is already installed on your desktop, please make sure that it is running. If you don't have it yet, please install for free from http://www.shape.ag/idisplay"</string>
    <string name="no_server_found_list_entry">No server found. Try again !</string>
    <string name="server_found_message">Below is the list of computers you can connect to. Tap to connect.</string>
    <string name="unable_to_connect">Please check your network setting and make sure that iDisplay desktop application is running</string>
    <string name="hint_single_touch">Press menu button to show menu. Select pan option from menu and drag to pan, select zoom option from menu to zoom. Tap and hold to simulate right click.</string>
    <string name="upgrade_notice">Please upgrade your desktop app</string>
    <string name="connection_failed">Connection was not allowed.</string>
    <string name="disableHints">Do not show on startup again.</string>
    <string name="searching">Searching…</string>
    <string name="connecting_message_string">Connecting… Please confirm the connection in iDisplay desktop app.</string>
    <string name="could_not_connect_message_string">Could not connect to iDisplay desktop app. Please check your network connection and make sure iDisplay desktop application is running and you can see the confirmation prompt when connecting.</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="splash_screen_title_text">iDisplay</string>
    <string name="slash_screen_bottom_text">© 2013 SHAPE</string>
    <string name="server_denied_message">Connection was not allowed</string>
    <string name="hint_multitouch">Press menu button to show menu. Select pan option from menu and drag to pan, pinch to zoom. Tap and hold to simulate right click. Scroll with two fingers swipe.</string>
    <string name="success_message_string">Connection is successful. You may move items to secondary monitor now</string>
    <string name="invalid_ip">Invalid IP Address, try again!</string>
    <string name="invalid_ip_port">Please enter valid IP and Port number.</string>
    <string name="manual_enter_message">Please enter IP address and port.</string>
    <string name="WIFI_NOT_AVAILABLE">No WiFi Network found. Please check your Network Settings</string>
    <string name="LITE_VERSION_SERVER">Server closed connection. Probably, it is iDisplay Lite.</string>
    <string name="please_install_market">Please install Android Market Application.</string>
    <string name="shapeInfoString">© 2002—2013 SHAPE</string>
    <string name="failed_to_get_log_message">Failed to collect log</string>
    <string name="acquiring_log_progress_dialog_message">Collecting log from logcat</string>
    <string name="dialog_exception">iDisplay has detected unknown error. Do you want to inform SHAPE about the problem (you need configured email account)?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="crash_body_message">"Please mail this to android-logs@shape.ag
iDisplay log-file is attached to this email, please do not remove it."</string>
    <string name="crash_subject_message">iDisplay - Error report (ver. %s)</string>
    <string name="register">Register</string>
    <string name="try_btn">Try</string>
    <string name="buy_online">Buy online</string>
    <string name="requestregistration">Request of registration.</string>
    <string name="requesttrial">Request of trial.</string>
    <string name="registration">Registration</string>
    <string name="_welcome_text_full">"Have a pleasant experience! 
You need to have a license to register. 
If you don't have a license yet,
select 'Try' or 'Buy Online'."</string>
    <string name="_please_enter_your_licence_code_below">Please, enter your license code below:</string>
    <string name="_you_can_obtain_licence_code_at">"You can get your license code at
http://www.shape.ag"</string>
    <string name="_lic_cant_be_empty">The license code is missing, please enter your license code.</string>
    <string name="_lic_incorrect_pls_check_input">License code is incorrect. Please check and try again.</string>
    <string name="_registering">Registering…</string>
    <string name="register_licence">Register license</string>
    <string name="goto_trial_mode">Go to trial mode</string>
    <string name="ok">OK</string>
    <string name="exit">Exit</string>
    <string name="support">Support</string>
    <string name="trial_response">This program is unregistered. The trial period expires on $1. To register it please visit our site www.shape.ag and purchase the license code.</string>
    <string name="trial_expired_msg">Your 7-day free trial has expired. If you want to continue using iDisplay, you need to buy a license. If you have the license, please enter your license and press Register button</string>
    <string name="wrong_lic_entered_msg">You have entered incorrect license code. Please check and try again.</string>
    <string name="unknown_reg_err_msg">Unknown registration error. Please go to About and send a request to our support team</string>
    <string name="lic_is_used_msg">"You cannot use one license on more than one device.
"</string>
    <string name="another_ver_lic_msg">Your license is intended to register another version of iDisplay or another SHAPE product.</string>
    <string name="lic_canceled_msg">"The license was canceled. You may have requested:
 1. a refund;
 2. exchange for another one.
 If none of these reasons apply, please click go to About and send a request to our support team."</string>
    <string name="lic_exp_msg">Your license expired. If you want to continue using iDisplay please register with a valid license.</string>
    <string name="cant_coonect_msg">"Can't access registration server to check program availability. Please check network settings of your device and restart the program."</string>
    <string name="lic_success_message">iDisplay is registered. Thank your for using this product.</string>
    <string name="hint_single_touch_30">Press menu button to show menu. Select pan option from menu and drag to pan, select zoom option from menu to zoom. Tap and hold to simulate right click.</string>
    <string name="email_send_error">Cannot open e-mail application to send message</string>
    <string name="dont_show_again">"Don't show again"</string>
    <string name="remind_later">Remind me later</string>
    <string name="rate_it">Rate now!</string>
    <string name="rate_text">Like the new iDisplay? Let others know about it by leaving a positive feedback on Android Market. Thank you!</string>
    <string name="connect_via_usb">Connect via USB</string>
    <string name="connect_button_text">Connect</string>
    <string name="connect_to_usb_server">"Trying to find the last version of iDisplay desktop application. Please make sure that it is running, and your device is connected to desktop with USB. Debugging mode enabled under Settings / Applications / Development / USB Debugging. If you don't have it yet, please install for free from %s"</string>
    <string name="settings_autoconnect">Autoconnect</string>
    <string name="settings_autoconnect_summary">Automatically connect to last known host when application started</string>
    <string name="settings_smooth_video">Smooth video</string>
    <string name="menu_hints">Show Hints</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_pan">Pan</string>
    <string name="menu_about">About</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_keyboard">Show Keyboard</string>
    <string name="ip_label_text">IP</string>
    <string name="port_label_text">PORT</string>
    <string name="rate_button">Rate!</string>
    <string name="processing_text">Processing…</string>
    <string name="www_button">shape.ag</string>
    <string name="more_apps_title">More apps</string>
    <string name="faq_button">FAQ</string>
    <string name="tell_button">Tell a Friend</string>
    <string name="support_button">Support</string>
    <string name="refresh_button">Refresh</string>
    <string name="searching_button">Searching</string>
    <string name="manually_button">Enter Manually</string>
    <string name="tell_a_friend_text">"Hi,

 Take a minute and check out iDisplay application for Android and iPhone/iPad:

 Android version: http://www.shape.ag/idisplay
 iPhone/iPad: http://itunes.apple.com/WebObjects/MZStore.woa/wa/viewSoftware?id=363500805&amp;mt=8 

 Turn your Android, iPad or iPhone into a convenient side monitor for your desktop. Ideal for multi-tasking users, iDisplay lets you free the main monitor for work-related applications by moving some windows to the external display, shown on your tablet or mobile phone. iDisplay can be used for instant messaging, Twitter, displaying weather and news gadgets or other tools. Learn more on www.shape.ag/idisplay. 

 Sincerely,"</string>
    <string name="could_not_connect_through_usb_message_string">Could not connect to iDisplay desktop app. Please check your usb cable and make sure iDisplay desktop application is running and you can see the confirmation prompt when connecting.</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_resolution_title">Resolution</string>
    <string name="menu_resolution_description">Windows will detect iDisplay as secondary display with one of these virtual resolutions. Lower resolution usually results in faster image rendering and makes interactions with objects easier.</string>
    <string name="wifi_is_off">WiFi is off. Please enable WiFi in settings.</string>
    <string name="wifi_settings">WiFi Settings</string>
    <string name="menu_screenshot">Screen Shot</string>
    <string name="wifi_cant_open_settings">"Can't open WiFi settings"</string>
    <string name="crash_body_message_header_2_4_short">This is a link to an iDisplay log-file, please do not remove it.</string>
    <string name="settings_show_battery">Battery widget</string>
    <string name="settings_show_battery_summary">Displays current battery level</string>
    <string name="settings_sound_enabled">Sound</string>
    <string name="settings_sound_enabled_summary">Enable sound (Windows)</string>
</resources>